--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -43,7 +45,7 @@ dependencies:
   dartz: ^0.10.1
   google_fonts: ^6.2.1
   window_manager: ^0.4.3
-  intl: ^0.20.2
+  intl: ^0.19.0
   pdf: ^3.11.3
   file_picker: ^9.2.1
   riverpod: ^2.6.1
